fixing overflow-x

--- a/src/static/css/commonstyle.css
+++ b/src/static/css/commonstyle.css
@@ -110,12 +110,13 @@ img {
 
 /* LAYOUT */
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   background-color: var(--bg-mid);
-  overflow-x: hidden;
-  width: 100%;
-  min-width: 100vw;
   /* overscroll-behavior-y: none;
   overscroll-behavior-block: none;
   -webkit-overflow-scrolling: touch; */
